# Knowledge-Graph-CRM

./: .dockerignore  .env.template  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: azure-container-webapp.yml
app/: database.py  main.py  seed_data.py
app/backend/: Dockerfile  database.py  main.py  pyproject.toml  seed_data.py
app/backend/models/: company.py  interaction.py
app/backend/routes/: company.py  graph.py  interaction.py  lead.py  people.py
app/frontend/: Dockerfile  Home.py  app.py  pyproject.toml
app/frontend/pages/: People.py
app/frontend/shared/: api_client.py
app/models/: company.py  interaction.py  lead.py  person.py
app/routes/: company.py  interaction.py  lead.py  people.py
